--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -70,7 +70,7 @@
                                                             <li>
                                                                 <p> Fixed Diposit </p>
                                                             </li>
-                                                            <li><a href="banking_fixed_term_deposit.html"><i
+                                                            <li><a href="fixed-term-deposit.html"><i
                                                                         class="fa fa-plus-circle"></i>
                                                                     &nbsp; Fixed Term Diposit</a> </li>
                                                             <li><a href="fixed-deposit-reinvestment.html"><i class="fa fa-plus-circle"></i>
